test/type_inference/negative/type_args8.output
type_args8.impala:6 col 4 - 5: error: could not find instance for type variable #0.
